<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homepage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0f0f0"
    android:fitsSystemWindows="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:orientation="vertical" >

        <!-- 首页 -->
        <!-- 第一部分导航栏 -->

        <include layout="@layout/titie_header_homepage" />

        <!-- 第二部分图片切换位置 -->

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#f0f0f0" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <FrameLayout
                    android:id="@+id/framelayout"
                    android:layout_width="fill_parent"
                    android:layout_height="170dip"
                    android:orientation="vertical" >

                    <com.example.ext.common.imageCarousel.bannerview.ViewFlow
                        android:id="@+id/viewflow"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent" />

                    <FrameLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:background="@color/transparent"
                        android:gravity="center"
                        android:padding="3dip" >

                        <com.example.ext.common.imageCarousel.bannerview.CircleFlowIndicator
                            android:id="@+id/viewflowindic"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal|bottom"
                            android:padding="2dip"
                            app:activeColor="#ff0000"
                            app:activeType="fill"
                            app:circleSeparation="20dip"
                            app:inactiveColor="#ffffff"
                            app:inactiveType="fill"
                            app:radius="4dip" />
                    </FrameLayout>
                </FrameLayout>

                <LinearLayout
                    android:id="@+id/three"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_marginTop="5dp"
                    android:background="#ffffff" >

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="14dp"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical" >

                        <ImageView
                            android:id="@+id/zixun"
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:src="@drawable/home_xf" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:text="@string/zixun"
                            android:textColor="#f45111"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="14dp"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical" >

                        <ImageView
                            android:id="@+id/ground"
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:src="@drawable/icon_arround_homepage" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:text="@string/zhoubian"
                            android:textColor="#f45111"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="14dp"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical" >

                        <ImageView
                            android:id="@+id/views"
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:src="@drawable/icon_view_homepage" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/fengjingqiang"
                            android:textColor="#f45111"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="14dp"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical" >

                        <ImageView
                            android:id="@+id/maps"
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:src="@drawable/icon_schmap_homepage" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/ditu"
                            android:textColor="#f45111"
                            android:textSize="14sp" />
                    </LinearLayout>
                </LinearLayout>
                <!-- 第三部分 -->

                <LinearLayout
                    android:id="@+id/three_follow"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginTop="0dp"
                    android:background="#ffffff" >

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical" >

                        <ImageView
                            android:id="@+id/activitys"
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:src="@drawable/icon_activity_homepage" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:text="@string/huodong"
                            android:textColor="#f45111"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical" >

                        <ImageView
                            android:id="@+id/yiwus"
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:src="@drawable/icon_yiwu_homepage" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:text="@string/charge"
                            android:textColor="#f45111"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical" >

                        <ImageView
                            android:id="@+id/shares"
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:src="@drawable/icon_share_homepage" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/share"
                            android:textColor="#f45111"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical" >

                        <ImageView
                            android:id="@+id/classes"
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:src="@drawable/icon_class_homepage" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/classchart"
                            android:textColor="#f45111"
                            android:textSize="14sp" />
                    </LinearLayout>
                </LinearLayout>

     
                <FrameLayout
                    android:id="@+id/main_notice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip" >
                </FrameLayout>
                
                <include layout="@layout/mainpage_forads"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</FrameLayout>